--- a/mascotas.html
+++ b/mascotas.html
@@ -24,7 +24,7 @@
                     <th>Edad de la mascota</th>
                     <th>Teléfono del dueño</th>
                     <th>Especialidad requerida</th>
-                    <th>Doctor</th>
+                    <th>Medico</th>
                 </tr>
             </thead>
             <tbody>
@@ -35,6 +35,7 @@
             <input type="button" id="botonVolver" value="Volver">
         </div>
     </main>
+    <script src="mascotas.js"></script>
     <script src="volver.js"></script>
 </body>
 
